# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.9

  - WL#11239, DevAPI: Remove create table implementation.

  - Fix for Bug#27131100, WL#11212 : SAVEPOINT CREATING WITH EMPTY STRING AND SPACE AS NAME.

  - WL#11212, DevAPI: transaction save-points.

  - WL#11060, Support new SHA-256 authentication system.

  - Fix for Bug#87826 (26846249), MYSQL JDBC CONNECTOR/J DATABASEMETADATA NULL PATTERN HANDLING IS NON-COMPLIANT.

  - WL#11163, Extract parameter setters, serverPrepare() and serverExecute() to core classes.

  - Fix for BUG#26995710, WL#11161 : NULL POINTER EXCEPTION IN EXECUTEBATCH() AND CLOSE().

  - WL#11161, Unify query bindings.

  - WL#8469, Don't extract query text from packets when possible.

Version 8.0.8

  - Fix for BUG#26722030, TEST FAILING DUE TO BINARY LOGGING ENABLED BY DEFAULT IN MYSQL 8.0.3.

  - Fix for BUG#26722018, TESTS FAILING DUE TO CHANGE IN INFORMATION_SCHEMA.INNODB_SYS_* NAMING.

  - Fix for BUG#26750807, MASTER : NULL POINTER EXCEPTION IN SCHEMA.DROPVIEW(NULL).

  - Fix for BUG#26750705, MASTER : ERROR - UNSUPPORTED CONVERSION FROM TIME TO JAVA.SQL.DATE.

  - WL#10620, DevAPI: SHA256 Authentication support.

  - WL#10936, DevAPI: Row locking for Crud.Find.

  - WL#9868, DevAPI: Configuration handling interface.

  - WL#10935, DevAPI: Array or Object "contains" operator.

  - WL#9875, Prepare c/J 8.0 for DEB and RPM builds.

  - Fix for BUG#26259384, CALLABLE STATEMENT GIVES ERROR IN C/JAVA WHEN RUN AGAINST MYSQL 8.0.

  - Fix for Bug#26393132, NULLPOINTEREXCEPTION IS THROWN WHEN TRIED TO DROP A NULL COLLECTION.

  - WL#10532, DevAPI: Cleanup Drop APIs.

  - Fix for Bug#87429 (26633984), repeated close of ServerPreparedStatement causes memory leak.
    Thanks to Eduard Gurskiy for his contribution.

  - Fix for Bug#87379 (26646676), Perform actual TLS capabilities check when restricting TLSv1.2.
    Thanks to Todd Farmer for his contribution.
