@@ -3,6 +3,8 @@
 
 Version 8.0.9
 
+  - Fix for Bug#26266731, CONCUR_UPDATABLE RESULTSET OPERATIONS FAIL AGAINST 8.0 FOR BOOLEAN COLUMN.
+
   - WL#11239, DevAPI: Remove create table implementation.
 
   - Fix for Bug#27131100, WL#11212 : SAVEPOINT CREATING WITH EMPTY STRING AND SPACE AS NAME.
